--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,10 +8,9 @@
     "start": "node server.js",
     "devStart": "nodemon server.js"
   },
-  "author": "Shiva",
+  "author": "Sathvik",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
   }
